force-app/main/default/objects/Account/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <defaultValue>&quot;https://company.com&quot;</defaultValue>
    <label>API Endpoint</label>
    <length>44</length>
    <type>Text</type>
</CustomField>