force-app/main/default/objects/Account/fields/History__c.field-meta.xml
<CustomField>
    <fullName>History__c</fullName>
    <label>History</label>
    <length>20</length>
    <type>Text</type>
</CustomField>