force-app/main/default/objects/Account/fields/NewAccountDateField__c.field-meta.xml
<CustomField>
    <fullName>NewAccountDateField__c</fullName>
    <label>NewAccountDateField</label>
    <type>Date</type>
</CustomField>