force-app/main/default/objects/Account/fields/NewAccountField__c.field-meta.xml
<CustomField>
    <fullName>NewAccountField__c</fullName>
    <label>NewAccountField</label>
    <length>44</length>
    <type>Text</type>
</CustomField>